--- a/Tesla/tesla_q3/tesla_q3.ui
+++ b/Tesla/tesla_q3/tesla_q3.ui
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Widget</class>
- <widget class="QWidget" name="Widget">
+ <class>tesla_q3</class>
+ <widget class="QWidget" name="tesla_q3">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>503</width>
-    <height>387</height>
+    <width>527</width>
+    <height>396</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Super Ham</string>
+   <string>tesla_q3</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="printHam_btn">
+      <widget class="QPushButton" name="pushButton">
        <property name="text">
-        <string>Print Ham</string>
+        <string>print name</string>
        </property>
       </widget>
      </item>
