--- a/Tesla/tesla_q3/tesla_q3.ui
+++ b/Tesla/tesla_q3/tesla_q3.ui
@@ -28,6 +28,26 @@
          <string>comments</string>
         </property>
        </column>
+       <item>
+        <property name="text">
+         <string>2</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>3</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>4</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>5</string>
+        </property>
+       </item>
       </widget>
      </item>
     </layout>
